# ytdownloader

./: .gitignore  anfoderungsheft.txt  databaseSql.py  main.py  pyproject.toml  readme.md  server.py  testing.py
databasescheme/: database.sql  scheme.dia
frontend/: index.html  introduction.html  main.js
